--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "gatsby-plugin-react-helmet": "^2.0.5",
     "gatsby-plugin-sass": "^1.0.17",
     "gatsby-source-wordpress": "^2.0.61",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-icons": "^2.2.5"
   },
   "keywords": [
     "gatsby"
