--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "gatsby-plugin-sass": "^1.0.17",
     "gatsby-source-wordpress": "^2.0.61",
     "react-helmet": "^5.2.0",
-    "react-icons": "^2.2.5"
+    "react-icons": "^2.2.5",
+    "typography-theme-wordpress-2013": "^0.15.10"
   },
   "keywords": [
     "gatsby"
