--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-source-wordpress": "^2.0.61",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.5",
+    "typography": "^0.16.0",
     "typography-theme-wordpress-2013": "^0.15.10"
   },
   "keywords": [
